<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="main_menu_button1">Поиск</string>
    <string name="main_menu_button2">Медиатека</string>
    <string name="settings_name">Настройки</string>
    <string name="settings_button1">Темная тема</string>
    <string name="settings_button2">Поделиться приложением</string>
    <string name="settings_button3">Написать в поддержку</string>
    <string name="settings_button4">Пользовательское соглашение</string>
    <string name="course_url" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="my_email" translatable="false">eg0r-taras0v@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение</string>
    <string name="search_name">Поиск</string>
    <string name="practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_404">Ничего не нашлось</string>
    <string name="search_no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="itunes_base_url" translatable="false">https://itunes.apple.com</string>
    <string name="search_history">Вы искали</string>
    <string name="search_clear_history">Очистить историю</string>

    <string name="audioplayer_description_country">Страна</string>
    <string name="audioplayer_description_style">Жанр</string>
    <string name="audioplayer_description_year">Год</string>
    <string name="audioplayer_description_album">Альбом</string>
    <string name="audioplayer_description_duration">Длительность</string>

    <string name="media_fragment_playlist_empty">Вы не создали\nни одного плейлиста</string>
    <string name="media_fragment_favorites_empty">Ваша медиатека пуста</string>
    <string name="media_name">Медиатека</string>
    <string name="media_button_new_playlist">Новый плейлист</string>
    <string name="media_tab_favorites">"Избранные треки"</string>
    <string name="media_tab_playlist">"Плейлисты"</string>

    <string name="fragment_playlist_new_field_name">Название*</string>
    <string name="fragment_playlist_new_field_description">Описание</string>
    <string name="fragment_playlist_new_button_description">Создать</string>
    <string name="fragment_playlist_new_button_description2">Сохранить</string>
    <string name="fragment_playlist_new_header">Новый плейлист</string>
    <string name="fragment_playlist_new_header2">Редактировать</string>
    <string name="fragment_playlist_new_toast_1">"Плейлист "</string>
    <string name="fragment_playlist_new_toast_2">" создан"</string>
    <string name="fragment_playlist_new_dialog_title">"Завершить создание плейлиста?"</string>
    <string name="fragment_playlist_new_dialog_message">"Все несохраненные данные будут потеряны"</string>
    <string name="fragment_playlist_new_dialog_nevative">"Отмена"</string>
    <string name="fragment_playlist_new_dialog_positive">"Завершить"</string>


    <string name="fragment_playlist_new_dialog_on_long_clic_title">"Удалить трек"</string>
    <string name="fragment_playlist_new_dialog_on_long_clic_message">Хотите удалить трек?</string>
    <string name="fragment_playlist_new_dialog_message_1">"Вы уверены, что хотите удалить трек из плейлиста?"</string>
    <string name="fragment_playlist_new_dialog_nevative_no">"НЕТ"</string>
    <string name="fragment_playlist_new_dialog_positive_yes">"ДА"</string>
    <string name="fragment_playlist_new_dialog_toast">"В этом плейлисте нет списка треков, которым можно поделиться"</string>
    <string name="fragment_playlist_new_dialog_title_delete">"Хотите удалить плейлист?"</string>
    <string name="fragment_playlist_new_dialog_message_delete_playlist">Удалить плейлист</string>


    <string name="playlist_tracks_1">трек</string>
    <string name="playlist_tracks_2_3_4">трека</string>
    <string name="playlist_tracks_else">треков</string>
    <string name="playlist_minutes_1">минута</string>
    <string name="playlist_minutes_2_3_4">минуты</string>
    <string name="playlist_minutes_else">минут</string>


</resources>