<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/main_menu_button1"
                android:textColor="@color/black"
                android:textSize="@dimen/main_menu_default_textSize"
                app:cornerRadius="@dimen/main_menu_default_cornerRadius"
                app:icon="@drawable/search"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/main_menu_default_iconPadding"
                app:iconTint="@color/black"
                android:foreground="?attr/selectableItemBackground"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/media"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/main_menu_button2"
                android:textColor="@color/black"
                android:textSize="@dimen/main_menu_default_textSize"
                app:cornerRadius="@dimen/main_menu_default_cornerRadius"
                app:icon="@drawable/library"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/main_menu_default_iconPadding"
                app:iconTint="@color/black"
                android:foreground="?attr/selectableItemBackground"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/settings_name"
                android:textColor="@color/black"
                android:textSize="@dimen/main_menu_default_textSize"
                app:cornerRadius="@dimen/main_menu_default_cornerRadius"
                app:icon="@drawable/settings"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/main_menu_default_iconPadding"
                app:iconTint="@color/black"
                android:foreground="?attr/selectableItemBackground"/>
        </FrameLayout>


    </LinearLayout>


</LinearLayout>