<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".player.ui.fragment.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/audioplayer_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/audioplayer_guide_begin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/audioplayer_guide_begin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left2ndBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/audioplayer_guide_begin_2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right2ndBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/audioplayer_guide_begin_2" />

        <ImageButton
            android:layout_marginTop="25dp"
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/toolbar_arrowback"
            android:backgroundTint="@color/theme_white_black"
            android:padding="20dp">

        </ImageButton>

        <TextView
            android:id="@+id/description_country_value"
            style="@style/AudioplayerActivityDescriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="Великобритания Великобритания Великобритания"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right2ndBorder"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/description_style_value" />

        <TextView
            android:id="@+id/description_country"
            style="@style/AudioplayerActivityDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/audioplayer_description_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/description_country_value"
            app:layout_constraintStart_toEndOf="@id/left2ndBorder"
            app:layout_constraintTag="description_country"
            app:layout_constraintTop_toBottomOf="@id/description_style" />


        <TextView
            android:id="@+id/description_style_value"
            style="@style/AudioplayerActivityDescriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Rock Rock Rock Rock Rock Rock Rock Rock Rock Rock Rock Rock"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@id/description_country_value"
            app:layout_constraintEnd_toStartOf="@id/right2ndBorder"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/description_year_value" />

        <TextView
            android:id="@+id/description_style"
            style="@style/AudioplayerActivityDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/audioplayer_description_style"
            app:layout_constraintBottom_toTopOf="@id/description_country"
            app:layout_constraintEnd_toStartOf="@id/description_style_value"
            app:layout_constraintStart_toEndOf="@id/left2ndBorder"
            app:layout_constraintTag="description_style"
            app:layout_constraintTop_toBottomOf="@id/description_year" />


        <TextView
            android:id="@+id/description_year_value"
            style="@style/AudioplayerActivityDescriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="1965 1965 1965 1965 1965 1965 1965 1965 1965 1965 1965 "
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@id/description_style_value"
            app:layout_constraintEnd_toStartOf="@id/right2ndBorder"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/description_album_value" />

        <TextView
            android:id="@+id/description_year"
            style="@style/AudioplayerActivityDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Год"
            app:layout_constraintBottom_toTopOf="@id/description_style"
            app:layout_constraintEnd_toStartOf="@id/description_year_value"
            app:layout_constraintStart_toEndOf="@id/left2ndBorder"
            app:layout_constraintTag="description_year"
            app:layout_constraintTop_toBottomOf="@id/description_album" />


        <TextView
            android:id="@+id/description_album_value"
            style="@style/AudioplayerActivityDescriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009)"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@id/description_year_value"
            app:layout_constraintEnd_toStartOf="@id/right2ndBorder"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/description_duration_value" />

        <TextView
            android:id="@+id/description_album"
            style="@style/AudioplayerActivityDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/audioplayer_description_album"
            app:layout_constraintBottom_toTopOf="@id/description_year"
            app:layout_constraintEnd_toStartOf="@id/description_album_value"
            app:layout_constraintStart_toEndOf="@id/left2ndBorder"
            app:layout_constraintTag="description_album"
            app:layout_constraintTop_toBottomOf="@id/description_duration" />


        <TextView
            android:id="@+id/description_duration_value"
            style="@style/AudioplayerActivityDescriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="99:99:99:99:99:99:99:99:99:99:99:99:99:99:99:99:99:99:"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@id/description_album_value"
            app:layout_constraintEnd_toStartOf="@id/right2ndBorder"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <TextView
            android:id="@+id/description_duration"
            style="@style/AudioplayerActivityDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audioplayer_description_duration"
            app:layout_constraintBottom_toTopOf="@id/description_album"
            app:layout_constraintStart_toEndOf="@id/left2ndBorder"
            app:layout_constraintTag="description_duration"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="description_duration, description_album, description_year, description_style, description_country" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="@dimen/audioplayer_separator"
            app:layout_constraintBottom_toTopOf="@id/description_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_timer" />


        <TextView
            android:id="@+id/track_timer"
            style="@style/AudioplayerActivityStrings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audioplayer_track_timer_margin_top"
            android:text="99:99"
            android:textSize="@dimen/audioplayer_track_artist_text_size"
            app:layout_constraintBottom_toTopOf="@id/separator"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/audioplayer_playlist"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/button_play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audioplayer_button_play_margin_top"
            android:background="@drawable/audioplayer_play"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@id/track_timer"
            app:layout_constraintEnd_toStartOf="@id/button_favorites"
            app:layout_constraintStart_toEndOf="@id/button_playlist"
            app:layout_constraintTop_toBottomOf="@id/track_artist" />

        <ImageButton
            android:id="@+id/button_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/audioplayer_favorites_off"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/button_play"
            app:layout_constraintTop_toTopOf="@id/button_play" />


        <TextView
            android:id="@+id/track_artist"
            style="@style/AudioplayerActivityStrings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audioplayer_track_artist_marginTop"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="The Beatles The Beatles The Beatles The Beatles The Beatles The Beatles"
            android:textSize="@dimen/audioplayer_track_artist_text_size"
            app:layout_constraintBottom_toTopOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/track_name" />

        <TextView
            android:id="@+id/track_name"
            style="@style/AudioplayerActivityStrings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audioplayer_guide_begin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009)"
            android:textSize="@dimen/audioplayer_track_name_text_size"
            app:layout_constraintBottom_toTopOf="@id/track_artist"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/track_image" />


        <ImageView
            android:id="@+id/track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/audioplayer_track_image_marginTop"
            android:src="@drawable/track_placeholder"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/arrow_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/audioplayer_bottobsheet_line"
            android:layout_gravity="center" />

        <TextView
            android:layout_gravity="center"
            android:paddingTop="18dp"
            android:paddingBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="Добавить в плейлист" />


        <Button
            android:id="@+id/media_button_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/toolbar"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/media_button_new_playlist"
            android:textAllCaps="false"
            android:textColor="@color/search_buton_update"
            android:textSize="@dimen/search_error_button_text_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/audioplayer_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>